--- a/stack_etudiants/src/index.html
+++ b/stack_etudiants/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>À renommer</title>
-        <link rel="stylesheet" href="styles/main.css" />
+        <link rel="stylesheet" href="/src/styles/main.css" />
         <script src="scripts/main.js" defer></script>
     </head>
     <body>
@@ -20,7 +20,13 @@
             </nav>
             <!-- Logo in the middle -->
             <a href="#" class="header__brand">
-                <img src="assets/icons/LogoPrincipale.png" alt="Logo" />
+              <div id="left-line" class="line">
+                <span>FAIRY</span>
+              </div>
+              <img src="assets/icons/LogoPrincipale.png" alt="Logo" class="img_main" />
+              <div id="right-line" class="line">
+                <span>TAIL</span>
+              </div>
             </a>
             <!-- Buttons on the right -->
             <nav class="header__right_buttons">
